# arc-to-dataverse

./: LICENSE  README.md  pyproject.toml  test_dataverse_arc_csh.json
arc-metadata-blocks/: README.md
arc-metadata-blocks/resources/: study_schema.json  study_schema.tsv
arc-metadata-blocks/scripts/: json_schema_to_dataverse_tsv.py
arc-to-dataverse/: __init__.py  arc-to-metadata-blocks.py  citation_sample_block.json  convert-json-feed-dataverse.py  dataverse_helpers.py  domain.py  easy-dataverse-test.py  fairagro_minimal_metadata_block_schema_v0.3.json  poc-for-custom-json-endpoint.py  pyDataverse-test.py  study_sample_block.json
arc_to_dataverse/: __init__.py  __main__.py
arc_to_dataverse/domain/: crate_conversion.py  helpers.py
hackathon/: citation_block.json  pyDataverse-test.py  read_investigation.py  study_block.json
hackathon/arc-metadata-blocks/: README.md
hackathon/arc-metadata-blocks/resources/: study_schema.tsv
tests/data/: arc-ro-crate-metadata.json  isa-ro-crate-metadata.json  study_sample_block.json
